--- a/kali/Dockerfile
+++ b/kali/Dockerfile
@@ -7,17 +7,17 @@ ENV TERM xterm-256color
 RUN rm -fR /var/lib/apt/ && \
     apt-get clean && \
     apt-get update -y && \
-    #apt-get install -y software-properties-common kali-linux-headless openssh-server --fix-missing && \
     apt-get install -y software-properties-common openssh-server --fix-missing && \
-    mkdir /var/run/sshd && \
+    if [ ! -d "/var/run/sshd" ]; then \
+        mkdir /var/run/sshd; \
+    fi && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
     sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config && \
     sed -ri 's/UsePAM yes/#UsePAM yes/g' /etc/ssh/sshd_config && \
     echo 'root:kali' | chpasswd
 
 # Update DB and clean'up!
-#RUN updatedb && \
 RUN apt-get autoremove -y && \
-    apt-get clean 
+    apt-get clean
 
 CMD ["/usr/sbin/sshd", "-D"]
