--- a/vul-linux/Dockerfile
+++ b/vul-linux/Dockerfile
@@ -1,12 +1,14 @@
-FROM debian:jessie
+FROM debian:jessie-slim
 
 MAINTAINER t0kx <t0kx@protonmail.ch>
 
 # install debian stuff
-RUN apt-get update && \
+RUN echo "deb http://archive.debian.org/debian jessie main" > /etc/apt/sources.list && \
+    echo "deb http://archive.debian.org/debian-security jessie/updates main" >> /etc/apt/sources.list && \
+    apt-get update && \
     apt-get upgrade -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    wget curl netcat libpam0g-dev build-essential policykit-1 \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --force-yes \
+    wget curl netcat unzip libpam0g-dev build-essential policykit-1 \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # configure vuln application
@@ -15,7 +17,7 @@ RUN wget --no-check-certificate https://www.sudo.ws/dist/OLD/sudo-1.7.2.tar.gz -
     cd /tmp/sudo-1.7.2 && \
     ./configure && \
     make && make install
-RUN rm -rf /tmp/sudo*
+RUN rm -rf /tmp/sudo* && service dbus restart
 
 # create default user
 RUN useradd -d /home/user \
@@ -24,6 +26,8 @@ RUN useradd -d /home/user \
 
 # add sudoers entry
 RUN echo 'user ALL=NOPASSWD: sudoedit /etc/fstab' >> /etc/sudoers
+
+COPY ./exploit.sh /tmp
 
 USER user
 # run interactive shell
