--- a/win10/Dockerfile
+++ b/win10/Dockerfile
@@ -3,24 +3,33 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND noninteractive
 ENV TERM xterm-256color
 
+COPY download.py /
+
 RUN apt-get update -y && \
     apt-get install -y \
     qemu-kvm \
     build-essential \
     libvirt-daemon-system \
     libvirt-dev \
-    linux-image-$(uname -r) \
+    linux-image-5.4.0-126-generic \
     curl \
+    wget \
+    python3 \
+    python3-pip \
+    openssh-client \
     net-tools \
     jq && \
     apt-get autoremove -y && \
     apt-get clean
 
-RUN curl -O https://releases.hashicorp.com/vagrant/$(curl -s https://checkpoint-api.hashicorp.com/v1/check/vagrant  | jq -r -M '.current_version')/vagrant_$(curl -s https://checkpoint-api.hashicorp.com/v1/check/vagrant  | jq -r -M '.current_version')_x86_64.deb && \
-	dpkg -i vagrant_$(curl -s https://checkpoint-api.hashicorp.com/v1/check/vagrant  | jq -r -M '.current_version')_x86_64.deb && \
-	vagrant plugin install vagrant-libvirt && \
-	vagrant box add --provider libvirt peru/windows-10-enterprise-x64-eval && \
-	vagrant init peru/windows-10-enterprise-x64-eval
+RUN wget https://hashicorp-releases.yandexcloud.net/vagrant/2.4.1/vagrant_2.4.1-1_amd64.deb && \
+    dpkg -i vagrant_2.4.1-1_amd64.deb  && \
+    rm vagrant_2.4.1-1_amd64.deb && \
+    vagrant plugin install --plugin-clean-sources --plugin-source https://rubygems.org vagrant-libvirt && \
+    pip3 install wldhx.yadisk-direct && \
+    curl -L $(yadisk-direct https://disk.yandex.ru/d/7kDZcIIMjQZHPA) -o /tmp/windows-10-enterprise-x64-eval && \
+    vagrant box add --provider libvirt --name peru/windows-10-enterprise-x64-eval /tmp/windows-10-enterprise-x64-eval && \
+    vagrant init peru/windows-10-enterprise-x64-eval
 
 COPY Vagrantfile /
 COPY startup.sh /
