--- a/win10/Vagrantfile
+++ b/win10/Vagrantfile
@@ -7,10 +7,17 @@ Vagrant.configure("2") do |config|
   #config.vm.network "forwarded_port", guest: 139, host: 139
   #config.vm.network "forwarded_port", guest: 137, host: 137
   #config.vm.network "forwarded_port", guest: 135, host: 135
-  #config.vm.boot_timeout = 600
+  config.vm.boot_timeout = 3600
   #config.vm.base_address = "192.168.121.10"
   #config.winrm.host = "192.168.121.10"
-  #config.winrm.timeout = 3600
+  config.winrm.timeout = 3600
+  config.vm.provider "libvirt" do |libvirt|
+    libvirt.memory = 2096 # Adjust RAM
+    libvirt.cpus = 1      # Adjust CPU
+#    libvirt.boot_timeout = 1200 # 20 minutes
+    libvirt.graphics_type = "vnc"
+    libvirt.graphics_autoport = true
+  end
 
 end
 
